Organizacion de los archivos

--- a/html/index.html
+++ b/html/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="icon" href="imagenes/imagenPrueba.jpg" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <link rel="icon" href="/imagenes/desarrollo-sustentable.logo.jpg" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/normalize.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
@@ -55,7 +55,7 @@
         <h2 class="cuerpo__h2">¿Qué es?:</h2>
         <section>
           <img
-            src="imagenes/Desarrollo-Sustentable-compressed.jpeg"
+            src="/imagenes/Desarrollo-Sustentable-compressed.jpeg"
             class="imagenes"
             alt=""
             id="section__img--primera"
@@ -75,7 +75,7 @@
           <br />
           <h2 class="cuerpo__h2">Objetivos:</h2>
           <img
-            src="imagenes/ciudades-sustentables.jpg"
+            src="/imagenes/ciudades-sustentables.jpg"
             class="imagenes"
             alt="imagen2"
             id="section__img--segunda"
@@ -96,7 +96,7 @@
           <br />
           <h2 class="cuerpo__h2">¿En que ayuda?</h2>
           <img
-            src="imagenes/Emp-sustentable15.jpg"
+            src="/imagenes/Emp-sustentable15.jpg"
             class="imagenes"
             alt="imagen2"
             id="section__img--tercera"
@@ -147,6 +147,6 @@
       </div>
     </div>
     <!--Hasta aqui-->
-    <script src="main_index.js"></script>
+    <script src="/javascript/main_index.js"></script>
   </body>
 </html>
