Ajustes del boton para dispositivos moviles y ajuste a los subTitulos de los archivos para una ver vista en movil

--- a/html/sociales.html
+++ b/html/sociales.html
@@ -100,15 +100,14 @@
         </nav>
     </aside>
     <footer>
-        <h4>Este sitio web fue creado por:</h4>
     </footer>
     <!--Esto es de la barra lateral-->
     <div class="container">
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
             <a href="#indice__intro">Papel</a>
-            <a href="#indice__objetivos">Medias por tomar</a>
-            <a href="#indice__ayuda">Videos complementarios</a>
+            <a href="#indice__objetivos">Medias</a>
+            <a href="#indice__ayuda">Videos</a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="index_text">Indice</label>
