--- a/html/sociales.html
+++ b/html/sociales.html
@@ -29,6 +29,7 @@
                     <li><a href="/html/fisica.html">Fisica</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
                     <li><a href="/html/calculo.html">Calculo</a></li>
+                    <li><a href="/html/ingles.html">Ingles</a></li>
                 </ul>
             </nav>
         </div>
@@ -114,7 +115,7 @@
         </div>
     </div>
     <!--Hasta aqui-->
-    <script src="/javascript/main_fisica.js"></script>
+    <script src="/javascript/main.js"></script>
 </body>
 
 </html>
