--- a/html/index.html
+++ b/html/index.html
@@ -30,14 +30,15 @@
     <header class="header">
       <div class="contenedor logo-nav-contenedor">
         <i href="#" class="logo">Logo</i>
-        <span class="menu-icon" id="header__input-menu-index">&#9776;</span>
+        <span class="menu-icon" id="header__input-menu">&#9776;</span>
         <nav class="navegacion">
-          <ul id="navegar-index">
+          <ul id="navegar">
             <li><a href="/html/index.html">Incio</a></li>
             <li><a href="/html/sociales.html">Sociales</a></li>
             <li><a href="/html/fisica.html">Fisica</a></li>
             <li><a href="/html/programacion.html">Programación</a></li>
             <li><a href="/html/calculo.html">Calculo</a></li>
+            <li><a href="/html/ingles.html">Ingles</a></li>
           </ul>
         </nav>
       </div>
@@ -147,6 +148,6 @@
       </div>
     </div>
     <!--Hasta aqui-->
-    <script src="/javascript/main_index.js"></script>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
