--- a/html/sociales.html
+++ b/html/sociales.html
@@ -21,9 +21,9 @@
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
             <i href="#" class="logo">Logo</i>
-            <span class="menu-icon" id="header__input-menu-fisica">&#9776;</span>
+            <span class="menu-icon" id="header__input-menu">&#9776;</span>
             <nav class="navegacion">
-                <ul id="navegar-fisica">
+                <ul id="navegar">
                     <li><a href="/html/index.html">Incio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
                     <li><a href="/html/fisica.html">Fisica</a></li>
