Informacion sobre todas las paginas y que funcionen correctamente

--- a/html/fisica.html
+++ b/html/fisica.html
@@ -71,7 +71,7 @@
           <br id="indice__objetivos" />
           <br />
           <br />
-          <h2 class="cuerpo__h2">Medidas por tomar</h2>
+          <h2 class="cuerpo__h2">¿Que se puede hacer?:</h2>
           <img
             src="/imagenes/ciudades-sustentables.jpg"
             class="imagenes"
@@ -97,7 +97,7 @@
             id="section__img--tercera"
           />
           <p class="cuerpo__parrafo" id="parrafo3">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime blanditiis saepe possimus ipsum quis dignissimos incidunt, nesciunt placeat laudantium debitis tenetur. Rerum, iusto fugiat dolores in incidunt deleniti odit cumque!
+            
           </p>
         </section>
       </div>
@@ -130,8 +130,8 @@
       <input type="checkbox" id="btn-mas">
       <div class="index_mobile">
         <a href="#indice__intro">Papel</a>
-        <a href="#indice__objetivos">Medias por tomar</a>
-        <a href="#indice__ayuda">Videos complementarios</a>
+        <a href="#indice__objetivos">Medias</a>
+        <a href="#indice__ayuda">Videos</a>
       </div>
       <div class="btn-mas">
         <label for="btn-mas" class="index_text">Indice</label>
