--- a/html/index.html
+++ b/html/index.html
@@ -95,7 +95,7 @@
           <br id="indice__ayuda" />
           <br />
           <br />
-          <h2 class="cuerpo__h2">¿En que ayuda?</h2>
+          <h2 class="cuerpo__h2">Videos Complementarios:</h2>
           <img
             src="/imagenes/Emp-sustentable15.jpg"
             class="imagenes"
@@ -126,7 +126,7 @@
           </li>
           <br />
           <li class="nav__ol--text">
-            <a href="#indice__ayuda">¿En que ayuda?</a>
+            <a href="#indice__ayuda">Videos Complementarios</a>
           </li>
           </li>
         </ol>
@@ -141,7 +141,7 @@
       <div class="index_mobile">
         <a href="#indice__intro">¿Qué es?</a>
         <a href="#indice__objetivos">Objetivos</a>
-        <a href="#indice__ayuda">¿En que ayuda?</a>
+        <a href="#indice__ayuda">Videos</a>
       </div>
       <div class="btn-mas">
         <label for="btn-mas" class="index_text">Indice</label>
