--- a/html/sociales.html
+++ b/html/sociales.html
@@ -24,7 +24,7 @@
             <span class="menu-icon" id="header__input-menu">&#9776;</span>
             <nav class="navegacion">
                 <ul id="navegar">
-                    <li><a href="/index.html">Incio</a></li>
+                    <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/html/sociales.html">Sociales</a></li>
                     <li><a href="/html/fisica.html">Fisica</a></li>
                     <li><a href="/html/programacion.html">Programación</a></li>
