Agregar imagenes respectivas al tema

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -46,7 +46,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">Papel:</h2>
             <section>
-                <img src="/imagenes/Desarrollo-Sustentable-compressed.jpeg" class="imagenes" alt=""
+                <img src="/imagenes/slim-sostenible_calculo1.jpg" class="imagenes" alt=""
                     id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Los matemáticos ya se habían adelantado a esta proclama en 2013, año dedicado a las Matemáticas del
@@ -60,7 +60,7 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">¿Porque es importante?</h2>
-                <img src="/imagenes/ciudades-sustentables.jpg" class="imagenes" alt="imagen2"
+                <img src="/imagenes/sustentabilidad-min_calculo2.jpg" class="imagenes" alt="imagen2"
                     id="section__img--segunda" />
                 <p class="cuerpo__parrafo" id="parrafo2">
                     Nuestro planeta está sujeto a continuos cambios; tanto su interior, como la corteza terrestre, la
