--- a/html/ingles.html
+++ b/html/ingles.html
@@ -46,7 +46,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">Paper:</h2>
             <section>
-                <img src="/imagenes/Desarrollo-Sustentable-compressed.jpeg" class="imagenes" alt=""
+                <img src="/imagenes/desarrollo-sustentable_ingles1.jpg" class="imagenes" alt="image1"
                     id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     The concept of sustainable development is the result of a concerted action by nations to promote a
@@ -60,7 +60,7 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Examples of sustainable development:</h2>
-                <img src="/imagenes/ciudades-sustentables.jpg" class="imagenes" alt="imagen2"
+                <img src="/imagenes/desarrollo-sustentable_ingles2.jpg" class="imagenes" alt="image2"
                     id="section__img--segunda" />
                 <p class="cuerpo__parrafo" id="parrafo2">
                     <b>Use of clean or alternative energies.</b> Wind, solar, geothermal energy, among others,
