--- a/html/programacion.html
+++ b/html/programacion.html
@@ -46,7 +46,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">¿Qué es un SGA?:</h2>
             <section>
-                <img src="/imagenes/Desarrollo-Sustentable-compressed.jpeg" class="imagenes" alt=""
+                <img src="/imagenes/SGA.png" class="imagenes" alt=""
                     id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Un Sistema de Gestión Ambiental (SGA) es un marco formal para mejorar el desempeño ambiental y
@@ -58,7 +58,7 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">¿Porque implementar un SGA?:</h2>
-                <img src="/imagenes/ciudades-sustentables.jpg" class="imagenes" alt="imagen2"
+                <img src="/imagenes/Gestión-Ambiental.jpg" class="imagenes" alt="imagen2"
                     id="section__img--segunda" />
                 <p class="cuerpo__parrafo" id="parrafo2">
                     El cumplimiento de la legislación medioambiental y el cumplimiento de las demandas del lobby verde
