--- a/html/sociales.html
+++ b/html/sociales.html
@@ -46,7 +46,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">Papel:</h2>
             <section>
-                <img src="/imagenes/Desarrollo-Sustentable-compressed.jpeg" class="imagenes" alt=""
+                <img src="/imagenes/responsabilidad_social.jpg" class="imagenes" alt=""
                     id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Este es el momento en que nos centramos a los aspectos sociales del crecimiento sostenible,
@@ -59,7 +59,7 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Sociedad sotenible:</h2>
-                <img src="/imagenes/ciudades-sustentables.jpg" class="imagenes" alt="imagen2"
+                <img src="/imagenes/sociedadsustentable.jpeg" class="imagenes" alt="imagen2"
                     id="section__img--segunda" />
                 <p class="cuerpo__parrafo" id="parrafo2">
                     Una sociedad sostenible es aquella en la que los recursos no se utilizan a un ritmo superior a su
