--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
     />
     
-    <title>Desarrollos Sustentables</title>
+    <title>Desarrollo Sustentable</title>
   </head>
   <body id="indice__intro">
     <!--Copiar el codigo de aqui-->
@@ -49,7 +49,7 @@
     <article class="main">
       <div class="title">
         <h1>
-          Desarrollo Sustentable
+          Desarrollos Sustentables
         </h1>
       </div>
       <div class="cuerpo">
