--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <article class="main">
       <div class="title">
         <h1>
-          Desarrollos Sustentables
+          Desarrollo Sustentable
         </h1>
       </div>
       <div class="cuerpo">
