--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!--Copiar el codigo de aqui-->
     <header class="header">
       <div class="contenedor logo-nav-contenedor">
-        <i href="#" class="logo">Logo</i>
+        <i href="#" class="logo">D.S.</i>
         <span class="menu-icon" id="header__input-menu">&#9776;</span>
         <nav class="navegacion">
           <ul id="navegar">
