Agregar el video de la pagina de Fisica

--- a/html/fisica.html
+++ b/html/fisica.html
@@ -90,12 +90,7 @@
           <br />
           <br />
           <h2 class="cuerpo__h2">Videos complementarios:</h2>
-          <img
-            src="/imagenes/Emp-sustentable15.jpg"
-            class="imagenes"
-            alt="imagen2"
-            id="section__img--tercera"
-          />
+          <video src="/videos/ODS 14_fisica1.mp4" class="imagenes" controls>Video1</video>
           <p class="cuerpo__parrafo" id="parrafo3">
             
           </p>
