Agregar los 3 videos para la pagina de Ingles

--- a/html/ingles.html
+++ b/html/ingles.html
@@ -83,7 +83,11 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Additional videos</h2>
-                <img src="/imagenes/Emp-sustentable15.jpg" class="imagenes" alt="imagen2" id="section__img--tercera" />
+                <video src="/videos/Mi proyecto ABP Educacion De Calidad_ingles1.mp4" class="imagenes" controls>Video1</video>
+                <br>
+                <video src="/videos/VID-20211123-WA0147_ingles2.mp4" class="imagenes" controls>Video2</video>
+                <br>
+                <video src="/videos/video-1637620071_ingles3.mp4" class="imagenes" controls>VIdeo3</video>
                 <p class="cuerpo__parrafo" id="parrafo3">
                     
                 </p>
