Agregar los 4 videos para la pagina Sociales

--- a/html/sociales.html
+++ b/html/sociales.html
@@ -46,8 +46,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">Papel:</h2>
             <section>
-                <img src="/imagenes/responsabilidad_social.jpg" class="imagenes" alt=""
-                    id="section__img--primera" />
+                <img src="/imagenes/responsabilidad_social.jpg" class="imagenes" alt="" id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Este es el momento en que nos centramos a los aspectos sociales del crecimiento sostenible,
                     examinamso las cuestiones que afectan directamente del crecimiento sostenible, examinamos las
@@ -71,11 +70,14 @@
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Videos complementarios:</h2>
-                <img src="/imagenes/Emp-sustentable15.jpg" class="imagenes" alt="imagen2" id="section__img--tercera" />
+                <video src="/videos/5M_TorresGómez_ODS12_sociales1.mov" class="imagenes" controls>Video1</video>
+                <br>
+                <video src="/videos/Fin de la pobreza_sociales2.mp4" class="imagenes" controls>Video2</video>
+                <br>
+                <video src="/videos/lv_0_20211122234138_sociales3.mp4" class="imagenes" controls>Video3</video>
+                <br>
+                <video src="/videos/ODS 3_sociales4.mp4" class="imagenes" controls>Video4</video>
                 <p class="cuerpo__parrafo" id="parrafo3">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime blanditiis saepe possimus ipsum
-                    quis dignissimos incidunt, nesciunt placeat laudantium debitis tenetur. Rerum, iusto fugiat dolores
-                    in incidunt deleniti odit cumque!
                 </p>
             </section>
         </div>
@@ -101,6 +103,7 @@
         </nav>
     </aside>
     <footer>
+        <h4>Este sitio web fue creado: </h4>
     </footer>
     <!--Esto es de la barra lateral-->
     <div class="container">
