Agregar los 3 videos para la pagina de Inicio

--- a/index.html
+++ b/index.html
@@ -96,18 +96,12 @@
           <br />
           <br />
           <h2 class="cuerpo__h2">Videos Complementarios:</h2>
-          <img
-            src="/imagenes/Emp-sustentable15.jpg"
-            class="imagenes"
-            alt="imagen2"
-            id="section__img--tercera"
-          />
+          <video src="/videos/5M_GarzaCerda_RobledoCabrera_ODS15_inicio1.mp4" class="imagenes" controls>Video1</video>
+          <br>
+          <video src="/videos/lv_0_20211124143209_inicio2.mp4" class="imagenes" controls>Video2</video>
+          <br>
+          <video src="/videos/ODS 2 (1)_inicio3.mp4" class="imagenes" controls>Video3</video>
           <p class="cuerpo__parrafo" id="parrafo3">
-            El desarrollo sustentable ayuda a acabar con la pobreza en todo el mundo,
-            también ajusta la desigualdad social, atiende a las necesidades humanas de
-            forma justa y balanceada. También reorienta la tecnología para poder
-            respetar al planeta y garantizar la viabilidad a pesar de existir aspectos
-            negativos.
           </p>
         </section>
       </div>
