Edicion del footer.

--- a/html/ingles.html
+++ b/html/ingles.html
@@ -115,7 +115,7 @@
         </nav>
     </aside>
     <footer>
-        <h4>Este sitio web fue creado por:</h4>
+        <h4>Proyecto ABP <br> D.S.</h4>
     </footer>
     <!--Esto es de la barra lateral-->
     <div class="container">
