--- a/html/sociales.html
+++ b/html/sociales.html
@@ -103,7 +103,7 @@
         </nav>
     </aside>
     <footer>
-        <h4>Este sitio web fue creado: </h4>
+        <h4>Proyecto ABP <br> D.S.</h4>
     </footer>
     <!--Esto es de la barra lateral-->
     <div class="container">
