Correcion de errores de ortografia

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -89,7 +89,7 @@
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">¿Porque es tan importante?</a>
+                    <a href="#indice__objetivos">¿Porque es importante?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
