--- a/html/fisica.html
+++ b/html/fisica.html
@@ -107,7 +107,7 @@
           </li>
           <br />
           <li class="nav__ol--text">
-            <a href="#indice__objetivos">Medias por tomar</a>
+            <a href="#indice__objetivos">¿Que se puede hacer?</a>
           </li>
           <br />
           <li class="nav__ol--text">
