--- a/html/programacion.html
+++ b/html/programacion.html
@@ -85,11 +85,11 @@
         <nav class="indice">
             <ol>
                 <li class="nav__ol--text">
-                    <a href="#indice__intro">¿Qué es?</a>
+                    <a href="#indice__intro">¿Qué es un SGA?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">Objetivos</a>
+                    <a href="#indice__objetivos">¿Porque implementar un SGA?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
@@ -107,7 +107,7 @@
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
             <a href="#indice__intro">¿Qué es?</a>
-            <a href="#indice__objetivos">Objetivos</a>
+            <a href="#indice__objetivos">¿Porque?</a>
             <a href="#indice__ayuda">Videos</a>
         </div>
         <div class="btn-mas">
