--- a/html/sociales.html
+++ b/html/sociales.html
@@ -57,7 +57,7 @@
                 <br id="indice__objetivos" />
                 <br />
                 <br />
-                <h2 class="cuerpo__h2">Sociedad sotenible:</h2>
+                <h2 class="cuerpo__h2">Sociedad sostenible:</h2>
                 <img src="/imagenes/sociedadsustentable.jpeg" class="imagenes" alt="imagen2"
                     id="section__img--segunda" />
                 <p class="cuerpo__parrafo" id="parrafo2">
@@ -110,7 +110,7 @@
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
             <a href="#indice__intro">Papel</a>
-            <a href="#indice__objetivos">Medias</a>
+            <a href="#indice__objetivos">Sostenible</a>
             <a href="#indice__ayuda">Videos</a>
         </div>
         <div class="btn-mas">
