Creacion del pre-loader para todas las paginas

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -16,7 +16,13 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body id="indice__intro">
+<body class="body">
+    <!--Pre-Loader-->
+    <div class="loader" id="cargador">
+        <div class="preloader">
+            <p><b>Cargando</b></p>
+        </div>
+    </div>
     <!--Copiar el codigo de aqui-->
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
@@ -46,8 +52,7 @@
         <div class="cuerpo">
             <h2 class="cuerpo__h2">Papel:</h2>
             <section>
-                <img src="/imagenes/slim-sostenible_calculo1.jpg" class="imagenes" alt=""
-                    id="section__img--primera" />
+                <img src="/imagenes/slim-sostenible_calculo1.jpg" class="imagenes" alt="" id="section__img--primera" />
                 <p class="cuerpo__parrafo" id="parrafo1">
                     Los matemáticos ya se habían adelantado a esta proclama en 2013, año dedicado a las Matemáticas del
                     Planeta Tierra por una iniciativa internacional de las sociedades y los institutos de investigación
@@ -72,7 +77,7 @@
                 <br id="indice__ayuda" />
                 <br />
                 <br />
-                <h2 class="cuerpo__h2">Videos complementarios</h2>
+                <h2 class="cuerpo__h2">Video complementario</h2>
                 <video src="/videos/ODS 13_calculo1.mp4" class="imagenes" controls>Video1</video>
                 <p class="cuerpo__parrafo" id="parrafo3">
                 </p>
@@ -93,7 +98,7 @@
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__ayuda">Videos complemetarios</a>
+                    <a href="#indice__ayuda">Video complemetario</a>
                 </li>
                 </li>
             </ol>
@@ -116,6 +121,7 @@
     </div>
     <!--Hasta aqui-->
     <script src="/javascript/main.js"></script>
+    <script src="/javascript/animation.js"></script>
 </body>
 
 </html>
