--- a/html/sociales.html
+++ b/html/sociales.html
@@ -16,8 +16,14 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body id="indice__intro">
-    <!--Copiar el codigo de aqui-->
+<body class="body">
+    <!--Pre-loader-->
+    <div class="loader" id="cargador">
+        <div class="preloader">
+          <p><b>Cargando</b></p>
+        </div>
+      </div>
+    <!--Cabecera-->
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
             <i href="#" class="logo">D.S.</i>
@@ -119,6 +125,7 @@
     </div>
     <!--Hasta aqui-->
     <script src="/javascript/main.js"></script>
+    <script src="/javascript/animation.js"></script>
 </body>
 
 </html>
