--- a/html/programacion.html
+++ b/html/programacion.html
@@ -16,8 +16,14 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body id="indice__intro">
-    <!--Copiar el codigo de aqui-->
+<body class="body">
+    <!--Pre-Loader-->
+  <div class="loader" id="cargador">
+    <div class="preloader">
+      <p><b>Cargando</b></p>
+    </div>
+  </div>
+    <!--Cabecera-->
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
             <i href="#" class="logo">D.S.</i>
@@ -34,8 +40,6 @@
             </nav>
         </div>
     </header>
-    <!--Hasta aqui, para mantener este menu de navegacion en todas las paginas-->
-
     <!--Aqui comeiza el cuerpo de la pagina-->
     <article class="main">
         <div class="title">
@@ -116,6 +120,7 @@
     </div>
     <!--Hasta aqui-->
     <script src="/javascript/main.js"></script>
+    <script src="/javascript/animation.js"></script>
 </body>
 
 </html>
