--- a/html/programacion.html
+++ b/html/programacion.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body">
+<body class="body" id="indice__intro">
     <!--Pre-Loader-->
   <div class="loader" id="cargador">
     <div class="preloader">
