--- a/html/sociales.html
+++ b/html/sociales.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body">
+<body class="body" id="indice__intro">
     <!--Pre-loader-->
     <div class="loader" id="cargador">
         <div class="preloader">
