Organizacion de las seciones

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
     <!--Pre-Loader-->
     <div class="loader" id="cargador">
         <div class="preloader">
@@ -61,7 +61,7 @@
                     las matemáticas es esencial: ningún fenómeno que ocurra en nuestro planeta es ajeno a esta
                     disciplina, ya que es el lenguaje de los modelos que permiten describirlos.
                 </p>
-                <br id="indice__objetivos" />
+                <br id="Seccion2" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">¿Porque es importante?</h2>
@@ -74,7 +74,7 @@
                     modelos cada vez más próximos a los procesos reales nos permite entenderlos, y en consecuencia, nos
                     ayuda a anticiparlos y controlarlos o, en última instancia, a paliar en todo lo posible sus efectos.
                 </p>
-                <br id="indice__ayuda" />
+                <br id="Seccion3" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Video complementario</h2>
@@ -90,15 +90,15 @@
         <nav class="indice">
             <ol>
                 <li class="nav__ol--text">
-                    <a href="#indice__intro">Papel</a>
+                    <a href="#Seccion1">Papel</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">¿Porque es importante?</a>
+                    <a href="#Seccion2">¿Porque es importante?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__ayuda">Video complemetario</a>
+                    <a href="#Seccion3">Video complemetario</a>
                 </li>
                 </li>
             </ol>
@@ -111,9 +111,9 @@
     <div class="container">
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
-            <a href="#indice__intro">Papel</a>
-            <a href="#indice__objetivos">Importancia</a>
-            <a href="#indice__ayuda">Videos</a>
+            <a href="#Seccion1">Papel</a>
+            <a href="#Seccion2">Importancia</a>
+            <a href="#Seccion3">Videos</a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="index_text">Indice</label>
