--- a/html/fisica.html
+++ b/html/fisica.html
@@ -16,7 +16,7 @@
   <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
   <!--Pre-Loader-->
   <div class="loader" id="cargador">
     <div class="preloader">
@@ -58,7 +58,7 @@
           La fisica tambien juega un rol importante en la creación de soluciones tecnologías
           para alcanzar un desarrollo sustentable
         </p>
-        <br id="indice__objetivos" />
+        <br id="Seccion2" />
         <br />
         <br />
         <h2 class="cuerpo__h2">¿Que se puede hacer?:</h2>
@@ -72,7 +72,7 @@
           degraduación, que se conocen las medidas correctoras y que está en nuestras
           manos contribuir a su puesta en práctica.
         </p>
-        <br id="indice__ayuda" />
+        <br id="Seccion3" />
         <br />
         <br />
         <h2 class="cuerpo__h2">Video complementario:</h2>
@@ -89,15 +89,15 @@
     <nav class="indice">
       <ol>
         <li class="nav__ol--text">
-          <a href="#indice__intro">Papel</a>
+          <a href="#Seccion1">Papel</a>
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="#indice__objetivos">¿Que se puede hacer?</a>
+          <a href="#Seccion2">¿Que se puede hacer?</a>
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="#indice__ayuda">Video complementario</a>
+          <a href="#Seccion3">Video complementario</a>
         </li>
         </li>
       </ol>
@@ -110,9 +110,9 @@
   <div class="container">
     <input type="checkbox" id="btn-mas">
     <div class="index_mobile">
-      <a href="#indice__intro">Papel</a>
-      <a href="#indice__objetivos">Medias</a>
-      <a href="#indice__ayuda">Videos</a>
+      <a href="#Seccion1">Papel</a>
+      <a href="#Seccion2">Medias</a>
+      <a href="#Seccion3">Videos</a>
     </div>
     <div class="btn-mas">
       <label for="btn-mas" class="index_text">Indice</label>
