--- a/html/programacion.html
+++ b/html/programacion.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
     <!--Pre-Loader-->
   <div class="loader" id="cargador">
     <div class="preloader">
@@ -58,7 +58,7 @@
                     es una poderosa herramienta para reducir los residuos y mejorar la eficiencia, sin sacrificar los
                     beneficios.
                 </p>
-                <br id="indice__objetivos" />
+                <br id="Seccion2" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">¿Porque implementar un SGA?:</h2>
@@ -72,7 +72,7 @@
                     de mejora continua, en el que las operaciones diarias de su negocio impulsan un mayor aumento de la
                     eficiencia.
                 </p>
-                <br id="indice__ayuda" />
+                <br id="Seccion3" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Video Complementario:</h2>
@@ -89,15 +89,15 @@
         <nav class="indice">
             <ol>
                 <li class="nav__ol--text">
-                    <a href="#indice__intro">¿Qué es un SGA?</a>
+                    <a href="#Seccion1">¿Qué es un SGA?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">¿Porque implementar un SGA?</a>
+                    <a href="#Seccion2">¿Porque implementar un SGA?</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__ayuda">Videos Complementarios</a>
+                    <a href="#Seccion3">Videos Complementarios</a>
                 </li>
                 </li>
             </ol>
@@ -110,9 +110,9 @@
     <div class="container">
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
-            <a href="#indice__intro">¿Qué es?</a>
-            <a href="#indice__objetivos">¿Porque?</a>
-            <a href="#indice__ayuda">Videos</a>
+            <a href="#Seccion1">¿Qué es?</a>
+            <a href="#Seccion2">¿Porque?</a>
+            <a href="#Seccion3">Videos</a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="index_text">Indice</label>
