--- a/html/sociales.html
+++ b/html/sociales.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
     <!--Pre-loader-->
     <div class="loader" id="cargador">
         <div class="preloader">
@@ -60,7 +60,7 @@
                     proceso de avance de la calidad de vida. Con especial atención a la responsabilidad social y al
                     urbanismo sostenible.
                 </p>
-                <br id="indice__objetivos" />
+                <br id="Seccion2" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Sociedad sostenible:</h2>
@@ -72,7 +72,7 @@
                     es capaz de absorber o neutralizar, y los recursos no renovables deben utilizarse a un ritmo
                     inferior al que el capital humano creado puede reemplazar el capital natural perdido.
                 </p>
-                <br id="indice__ayuda" />
+                <br id="Seccion3" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Videos complementarios:</h2>
@@ -92,15 +92,15 @@
         <nav class="indice">
             <ol>
                 <li class="nav__ol--text">
-                    <a href="#indice__intro">Papel</a>
+                    <a href="#Seccion1">Papel</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">Sociedad sostenible</a>
+                    <a href="#Seccion2">Sociedad sostenible</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__ayuda">Videos complementarios</a>
+                    <a href="#Seccion3">Videos complementarios</a>
                 </li>
                 </li>
             </ol>
@@ -113,9 +113,9 @@
     <div class="container">
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
-            <a href="#indice__intro">Papel</a>
-            <a href="#indice__objetivos">Sostenible</a>
-            <a href="#indice__ayuda">Videos</a>
+            <a href="#Seccion1">Papel</a>
+            <a href="#Seccion2">Sostenible</a>
+            <a href="#Seccion3">Videos</a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="index_text">Indice</label>
