--- a/html/ingles.html
+++ b/html/ingles.html
@@ -16,7 +16,7 @@
     <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
     <!--Pre-Loader-->
   <div class="loader" id="cargador">
     <div class="preloader">
@@ -61,7 +61,7 @@
                     to promote actions, ethical principles and new institutions oriented to a common goal:
                     sustainability.
                 </p>
-                <br id="indice__objetivos" />
+                <br id="Seccion2" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Examples of sustainable development:</h2>
@@ -84,7 +84,7 @@
                     <b>Reduction of energy consumption.</b> The less energy we consume, the levels of energy production are
                     reduced, which means less environmental impact and more economic savings.
                 </p>
-                <br id="indice__ayuda" />
+                <br id="Seccion3" />
                 <br />
                 <br />
                 <h2 class="cuerpo__h2">Additional videos</h2>
@@ -105,15 +105,15 @@
         <nav class="indice">
             <ol>
                 <li class="nav__ol--text">
-                    <a href="#indice__intro">Paper</a>
+                    <a href="#Seccion1">Paper</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__objetivos">Examples of sustainable development</a>
+                    <a href="#Seccion2">Examples of sustainable development</a>
                 </li>
                 <br />
                 <li class="nav__ol--text">
-                    <a href="#indice__ayuda">Additional videos</a>
+                    <a href="#Seccion3">Additional videos</a>
                 </li>
                 </li>
             </ol>
@@ -126,9 +126,9 @@
     <div class="container">
         <input type="checkbox" id="btn-mas">
         <div class="index_mobile">
-            <a href="#indice__intro">Paper</a>
-            <a href="#indice__objetivos">Examples</a>
-            <a href="#indice__ayuda">Videos</a>
+            <a href="#Seccion1">Paper</a>
+            <a href="#Seccion2">Examples</a>
+            <a href="#Seccion3">Videos</a>
         </div>
         <div class="btn-mas">
             <label for="btn-mas" class="index_text">Index</label>
