--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Desarrollo Sustentable</title>
 </head>
 
-<body class="body" id="indice__intro">
+<body class="body" id="Seccion1">
   <!--Pre-Loader-->
   <div class="loader" id="cargador">
     <div class="preloader">
@@ -64,7 +64,7 @@
           presente sin comprometer la capacidad de las generaciones futuras para
           satisfacer sus propias necesidades”.
         </p>
-        <br id="indice__objetivos" />
+        <br id="#Seccion2" />
         <br />
         <br />
         <h2 class="cuerpo__h2">Objetivos:</h2>
@@ -80,7 +80,7 @@
           Un crecimiento justo que no sacrifique los derechos de las generaciones que
           vendrán.
         </p>
-        <br id="indice__ayuda" />
+        <br id="Seccion3" />
         <br />
         <br />
         <h2 class="cuerpo__h2">Videos Complementarios:</h2>
@@ -101,15 +101,15 @@
     <nav class="indice">
       <ol>
         <li class="nav__ol--text">
-          <a href="#indice__intro">¿Qué es?</a>
+          <a href="#Seccion1">¿Qué es?</a>
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="#indice__objetivos">Objetivos</a>
+          <a href="##Seccion2">Objetivos</a>
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="#indice__ayuda">Videos Complementarios</a>
+          <a href="#Seccion3">Videos Complementarios</a>
         </li>
         </li>
       </ol>
@@ -122,9 +122,9 @@
   <div class="container">
     <input type="checkbox" id="btn-mas">
     <div class="index_mobile">
-      <a href="#indice__intro">¿Qué es?</a>
-      <a href="#indice__objetivos">Objetivos</a>
-      <a href="#indice__ayuda">Videos</a>
+      <a href="#Seccion1">¿Qué es?</a>
+      <a href="##Seccion2">Objetivos</a>
+      <a href="#Seccion3">Videos</a>
     </div>
     <div class="btn-mas">
       <label for="btn-mas" class="index_text">Indice</label>
