--- a/html/programacion.html
+++ b/html/programacion.html
@@ -77,6 +77,8 @@
                 <br />
                 <h2 class="cuerpo__h2">Video Complementario:</h2>
                 <video src="/videos/ODS 3_programcion1.mp4" class="imagenes" controls>Video1</video>
+                <video src="/videos/ODS 10_programacion2.mp4" class="imagenes" controls>Video2</video>
+                <video src="/videos/programacion3.mp4" class="imagenes" controls>Video2</video>
                 <p class="cuerpo__parrafo" id="parrafo3">
                     
                 </p>
