Cambio del preloader, para ser mas amigable con el usuario

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body class="body" id="Seccion1">
   <!--Pre-Loader-->
   <div class="loader" id="cargador">
-    <div class="preloader">
-      <p><b>Cargando</b></p>
-    </div>
+      <div></div>
+      <div></div>
+      <div></div>
   </div>
   <!--Cabezera-->
   <header class="header">
@@ -64,7 +64,7 @@
           presente sin comprometer la capacidad de las generaciones futuras para
           satisfacer sus propias necesidades”.
         </p>
-        <br id="#Seccion2" />
+        <br id="Seccion2" />
         <br />
         <br />
         <h2 class="cuerpo__h2">Objetivos:</h2>
@@ -105,7 +105,7 @@
         </li>
         <br />
         <li class="nav__ol--text">
-          <a href="##Seccion2">Objetivos</a>
+          <a href="#Seccion2">Objetivos</a>
         </li>
         <br />
         <li class="nav__ol--text">
@@ -123,7 +123,7 @@
     <input type="checkbox" id="btn-mas">
     <div class="index_mobile">
       <a href="#Seccion1">¿Qué es?</a>
-      <a href="##Seccion2">Objetivos</a>
+      <a href="#Seccion2">Objetivos</a>
       <a href="#Seccion3">Videos</a>
     </div>
     <div class="btn-mas">
