Correcion de errores en el pre-loader

--- a/html/calculo.html
+++ b/html/calculo.html
@@ -19,11 +19,11 @@
 <body class="body" id="Seccion1">
     <!--Pre-Loader-->
     <div class="loader" id="cargador">
-        <div class="preloader">
-            <p><b>Cargando</b></p>
-        </div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
-    <!--Copiar el codigo de aqui-->
+    <!--Cabezera-->
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
             <i href="#" class="logo">D.S.</i>
