--- a/html/fisica.html
+++ b/html/fisica.html
@@ -19,9 +19,11 @@
 <body class="body" id="Seccion1">
   <!--Pre-Loader-->
   <div class="loader" id="cargador">
-    <div class="preloader">
-      <p><b>Cargando</b></p>
-    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <!--Cabezera-->
   </div>
   <header class="header">
     <div class="contenedor logo-nav-contenedor">
