--- a/html/sociales.html
+++ b/html/sociales.html
@@ -19,10 +19,10 @@
 <body class="body" id="Seccion1">
     <!--Pre-loader-->
     <div class="loader" id="cargador">
-        <div class="preloader">
-          <p><b>Cargando</b></p>
-        </div>
-      </div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <!--Cabecera-->
     <header class="header">
         <div class="contenedor logo-nav-contenedor">
