--- a/html/ingles.html
+++ b/html/ingles.html
@@ -19,9 +19,9 @@
 <body class="body" id="Seccion1">
     <!--Pre-Loader-->
   <div class="loader" id="cargador">
-    <div class="preloader">
-      <p><b>Cargando</b></p>
-    </div>
+    <div></div>
+    <div></div>
+    <div></div>
   </div>
     <!--Cabecera-->
     <header class="header">
