--- a/html/calculo.html
+++ b/html/calculo.html
@@ -79,6 +79,7 @@
                 <br>
                 <h2 class="cuerpo__h2">Video complementario</h2>
                 <video src="/videos/ODS 13_calculo1.mp4" class="imagenes" controls>Video1</video>
+                <video src="/videos/ODS 6_calculo2.mp4" class="imagenes" controls>Video2 </video>
                 <p class="cuerpo__parrafo" id="parrafo3">
                 </p>
             </section>
